parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACTIVATE
    AND
    ARROW
    ASSERT
    ASSUME
    AT
    AUTOMATON
    BODY
    CASE
    CHAR
    CURRENT
    DEFAULT
    DIV
    DO
    ELSE
    ELSIF
    EMIT
    ENUM
    EVERY
    EXPONENT
    EXTERN
    FBY
    FINAL
    FLATTEN
    FLOAT
    FLOAT32
    FLOAT64
    FOLD
    FOLDI
    FOLDW
    FOLDWI
    GREATER
    GREATEREQU
    GROUP
    GUARANTEE
    HASHTAG
    IF
    INCLUDE
    INITIAL
    INT
    INT16
    INT64
    INTEGER
    INTEGERNUM
    IS
    LBPARENTHESE
    LBRACKET
    LESS
    LESSEQU
    LET
    LNOT
    LSHIFT
    LV6IDREF
    MAKE
    MAP
    MAPFOLD
    MAPFOLDI
    MAPFOLDW
    MAPFOLDWI
    MAPI
    MAPW
    MAPWI
    MATCH
    MERGE
    MODEL
    NEEDS
    NOEQU
    NOR
    NOT
    NUMERIC
    OF
    OPEN
    OR
    POINT
    PRE
    PROVIDES
    RBPARENTHESE
    RBRACKET
    REAL
    REALCONST
    RESTART
    RESUME
    REVERSE
    RSHIFT
    SENSOR
    SHIFT
    SIG
    SIGNED
    SPECIALIZE
    STATE
    STEP
    STRUCT
    SURPLUS
    SYNCHRO
    TEL
    THEN
    TIMES
    TPOINT
    TRANSPOSE
    TYPE
    UINT16
    UINT32
    UINT64
    UINT8
    UNLESS
    UNSAFE
    UNSIGNED
    UNTIL
    USES
    VAR
    VERTICALBAR
    WHEN
    WHERE
    WITH
    XOR

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Decls_zero_or_mode
Rule 2     Decls_zero_or_mode -> Decls Decls_zero_or_mode
Rule 3     Decls_zero_or_mode -> empty
Rule 4     Decls -> Const_block
Rule 5     Decls -> Package_decl
Rule 6     Decls -> User_op_decl
Rule 7     Package_decl -> Package Visibility_zero_or_one Pack_Lv6id Decls_zero_or_mode END SEMICOLON
Rule 8     User_op_decl -> Op_kind Interface_status User_op_decl_Lv6id User_op_decl_1 In_Params RETURNS Out_Params User_op_decl_2 User_op_decl_3 Opt_body
Rule 9     Pack_Lv6id -> LV6ID
Rule 10    User_op_decl_Lv6id -> LV6ID
Rule 11    Op_kind -> FUNCTION
Rule 12    Op_kind -> NODE
Rule 13    Opt_body -> SEMICOLON
Rule 14    Opt_body -> Equation SEMICOLON
Rule 15    Equation -> Simple_equation
Rule 16    Simple_equation -> Lhs EQU Expr
Rule 17    Lhs -> LPARENTHESE RPARENTHESE
Rule 18    Lhs -> Lhs_id Lhs_1
Rule 19    Lhs_1 -> COMMA Lhs_id Lhs_1
Rule 20    Lhs_1 -> empty
Rule 21    Lhs_id -> LV6ID
Rule 22    User_op_decl_1 -> empty
Rule 23    User_op_decl_2 -> empty
Rule 24    User_op_decl_3 -> empty
Rule 25    In_Params -> Params
Rule 26    Out_Params -> Params
Rule 27    Params -> LPARENTHESE Params_1 RPARENTHESE
Rule 28    Params_1 -> Var_decls Params_2
Rule 29    Params_1 -> empty
Rule 30    Params_2 -> SEMICOLON Var_decls Params_2
Rule 31    Params_2 -> empty
Rule 32    Var_decls -> Var_id Var_decls_1 COLON Type_expr Var_decls_2 Var_decls_3 Var_decls_4
Rule 33    Var_decls_1 -> COMMA Var_id Var_decls_1
Rule 34    Var_decls_1 -> empty
Rule 35    Var_id -> Var_id_1 Var_id_2 LV6ID
Rule 36    Var_id_1 -> CLOCK
Rule 37    Var_id_1 -> empty
Rule 38    Var_id_2 -> PROBE
Rule 39    Var_id_2 -> empty
Rule 40    Var_decls_2 -> empty
Rule 41    Var_decls_3 -> empty
Rule 42    Var_decls_4 -> empty
Rule 43    Package -> PACKAGE
Rule 44    Const_block -> CONST Const_decl SEMICOLON Const_block
Rule 45    Const_block -> empty
Rule 46    Const_decl -> Interface_status LV6ID COLON Type_expr EQU Expr
Rule 47    Const_decl -> Interface_status LV6ID COLON Type_expr
Rule 48    Interface_status -> Visibility_zero_or_one External
Rule 49    Interface_status -> Visibility_zero_or_one
Rule 50    Visibility_zero_or_one -> Visibility
Rule 51    Visibility_zero_or_one -> empty
Rule 52    External -> IMPORTED
Rule 53    Visibility -> PRIVATE
Rule 54    Visibility -> PUBLIC
Rule 55    Type_expr -> BOOL
Rule 56    Type_expr -> INT32
Rule 57    Type_expr -> INT8
Rule 58    Path_id -> LV6ID
Rule 59    Id_expr -> Path_id
Rule 60    Id_expr -> SINGLEQUOTE LV6ID
Rule 61    Id_expr -> LAST SINGLEQUOTE LV6ID
Rule 62    Expr -> Id_expr
Rule 63    Expr -> Atom
Rule 64    Expr -> Arith_expr
Rule 65    Arith_expr -> Expr Bin_arith_op Expr
Rule 66    Bin_arith_op -> PLUS
Rule 67    Bin_arith_op -> MINUS
Rule 68    Bin_arith_op -> STAR
Rule 69    Bin_arith_op -> DIVIDE
Rule 70    Bin_arith_op -> MOD
Rule 71    Bin_arith_op -> LAND
Rule 72    Bin_arith_op -> LOR
Rule 73    Bin_arith_op -> LXOR
Rule 74    Bin_arith_op -> LSL
Rule 75    Bin_arith_op -> LSR
Rule 76    Atom -> Bool_atom
Rule 77    Atom -> INTCONST
Rule 78    Bool_atom -> TRUE
Rule 79    Bool_atom -> FALSE
Rule 80    empty -> <empty>

Terminals, with rules where they appear

ACTIVATE             : 
AND                  : 
ARROW                : 
ASSERT               : 
ASSUME               : 
AT                   : 
AUTOMATON            : 
BODY                 : 
BOOL                 : 55
CASE                 : 
CHAR                 : 
CLOCK                : 36
COLON                : 32 46 47
COMMA                : 19 33
CONST                : 44
CURRENT              : 
DEFAULT              : 
DIV                  : 
DIVIDE               : 69
DO                   : 
ELSE                 : 
ELSIF                : 
EMIT                 : 
END                  : 7
ENUM                 : 
EQU                  : 16 46
EVERY                : 
EXPONENT             : 
EXTERN               : 
FALSE                : 79
FBY                  : 
FINAL                : 
FLATTEN              : 
FLOAT                : 
FLOAT32              : 
FLOAT64              : 
FOLD                 : 
FOLDI                : 
FOLDW                : 
FOLDWI               : 
FUNCTION             : 11
GREATER              : 
GREATEREQU           : 
GROUP                : 
GUARANTEE            : 
HASHTAG              : 
IF                   : 
IMPORTED             : 52
INCLUDE              : 
INITIAL              : 
INT                  : 
INT16                : 
INT32                : 56
INT64                : 
INT8                 : 57
INTCONST             : 77
INTEGER              : 
INTEGERNUM           : 
IS                   : 
LAND                 : 71
LAST                 : 61
LBPARENTHESE         : 
LBRACKET             : 
LESS                 : 
LESSEQU              : 
LET                  : 
LNOT                 : 
LOR                  : 72
LPARENTHESE          : 17 27
LSHIFT               : 
LSL                  : 74
LSR                  : 75
LV6ID                : 9 10 21 35 46 47 58 60 61
LV6IDREF             : 
LXOR                 : 73
MAKE                 : 
MAP                  : 
MAPFOLD              : 
MAPFOLDI             : 
MAPFOLDW             : 
MAPFOLDWI            : 
MAPI                 : 
MAPW                 : 
MAPWI                : 
MATCH                : 
MERGE                : 
MINUS                : 67
MOD                  : 70
MODEL                : 
NEEDS                : 
NODE                 : 12
NOEQU                : 
NOR                  : 
NOT                  : 
NUMERIC              : 
OF                   : 
OPEN                 : 
OR                   : 
PACKAGE              : 43
PLUS                 : 66
POINT                : 
PRE                  : 
PRIVATE              : 53
PROBE                : 38
PROVIDES             : 
PUBLIC               : 54
RBPARENTHESE         : 
RBRACKET             : 
REAL                 : 
REALCONST            : 
RESTART              : 
RESUME               : 
RETURNS              : 8
REVERSE              : 
RPARENTHESE          : 17 27
RSHIFT               : 
SEMICOLON            : 7 13 14 30 44
SENSOR               : 
SHIFT                : 
SIG                  : 
SIGNED               : 
SINGLEQUOTE          : 60 61
SPECIALIZE           : 
STAR                 : 68
STATE                : 
STEP                 : 
STRUCT               : 
SURPLUS              : 
SYNCHRO              : 
TEL                  : 
THEN                 : 
TIMES                : 
TPOINT               : 
TRANSPOSE            : 
TRUE                 : 78
TYPE                 : 
UINT16               : 
UINT32               : 
UINT64               : 
UINT8                : 
UNLESS               : 
UNSAFE               : 
UNSIGNED             : 
UNTIL                : 
USES                 : 
VAR                  : 
VERTICALBAR          : 
WHEN                 : 
WHERE                : 
WITH                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

Arith_expr           : 64
Atom                 : 63
Bin_arith_op         : 65
Bool_atom            : 76
Const_block          : 4 44
Const_decl           : 44
Decls                : 2
Decls_zero_or_mode   : 1 2 7
Equation             : 14
Expr                 : 16 46 65 65
External             : 48
Id_expr              : 62
In_Params            : 8
Interface_status     : 8 46 47
Lhs                  : 16
Lhs_1                : 18 19
Lhs_id               : 18 19
Op_kind              : 8
Opt_body             : 8
Out_Params           : 8
Pack_Lv6id           : 7
Package              : 7
Package_decl         : 5
Params               : 25 26
Params_1             : 27
Params_2             : 28 30
Path_id              : 59
Program              : 0
Simple_equation      : 15
Type_expr            : 32 46 47
User_op_decl         : 6
User_op_decl_1       : 8
User_op_decl_2       : 8
User_op_decl_3       : 8
User_op_decl_Lv6id   : 8
Var_decls            : 28 30
Var_decls_1          : 32 33
Var_decls_2          : 32
Var_decls_3          : 32
Var_decls_4          : 32
Var_id               : 32 33
Var_id_1             : 35
Var_id_2             : 35
Visibility           : 50
Visibility_zero_or_one : 7 48 49
empty                : 3 20 22 23 24 29 31 34 37 39 40 41 42 45 51

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Decls_zero_or_mode
    (2) Decls_zero_or_mode -> . Decls Decls_zero_or_mode
    (3) Decls_zero_or_mode -> . empty
    (4) Decls -> . Const_block
    (5) Decls -> . Package_decl
    (6) Decls -> . User_op_decl
    (80) empty -> .
    (44) Const_block -> . CONST Const_decl SEMICOLON Const_block
    (45) Const_block -> . empty
    (7) Package_decl -> . Package Visibility_zero_or_one Pack_Lv6id Decls_zero_or_mode END SEMICOLON
    (8) User_op_decl -> . Op_kind Interface_status User_op_decl_Lv6id User_op_decl_1 In_Params RETURNS Out_Params User_op_decl_2 User_op_decl_3 Opt_body
    (43) Package -> . PACKAGE
    (11) Op_kind -> . FUNCTION
    (12) Op_kind -> . NODE

  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for PACKAGE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for NODE resolved as shift
    $end            reduce using rule 80 (empty -> .)
    CONST           shift and go to state 8
    PACKAGE         shift and go to state 11
    FUNCTION        shift and go to state 12
    NODE            shift and go to state 13

  ! CONST           [ reduce using rule 80 (empty -> .) ]
  ! PACKAGE         [ reduce using rule 80 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 80 (empty -> .) ]
  ! NODE            [ reduce using rule 80 (empty -> .) ]

    Program                        shift and go to state 1
    Decls_zero_or_mode             shift and go to state 2
    Decls                          shift and go to state 3
    empty                          shift and go to state 4
    Const_block                    shift and go to state 5
    Package_decl                   shift and go to state 6
    User_op_decl                   shift and go to state 7
    Package                        shift and go to state 9
    Op_kind                        shift and go to state 10

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Decls_zero_or_mode .

    $end            reduce using rule 1 (Program -> Decls_zero_or_mode .)


state 3

    (2) Decls_zero_or_mode -> Decls . Decls_zero_or_mode
    (2) Decls_zero_or_mode -> . Decls Decls_zero_or_mode
    (3) Decls_zero_or_mode -> . empty
    (4) Decls -> . Const_block
    (5) Decls -> . Package_decl
    (6) Decls -> . User_op_decl
    (80) empty -> .
    (44) Const_block -> . CONST Const_decl SEMICOLON Const_block
    (45) Const_block -> . empty
    (7) Package_decl -> . Package Visibility_zero_or_one Pack_Lv6id Decls_zero_or_mode END SEMICOLON
    (8) User_op_decl -> . Op_kind Interface_status User_op_decl_Lv6id User_op_decl_1 In_Params RETURNS Out_Params User_op_decl_2 User_op_decl_3 Opt_body
    (43) Package -> . PACKAGE
    (11) Op_kind -> . FUNCTION
    (12) Op_kind -> . NODE

  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for PACKAGE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for NODE resolved as shift
    $end            reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    CONST           shift and go to state 8
    PACKAGE         shift and go to state 11
    FUNCTION        shift and go to state 12
    NODE            shift and go to state 13

  ! CONST           [ reduce using rule 80 (empty -> .) ]
  ! PACKAGE         [ reduce using rule 80 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 80 (empty -> .) ]
  ! NODE            [ reduce using rule 80 (empty -> .) ]

    Decls                          shift and go to state 3
    Decls_zero_or_mode             shift and go to state 14
    empty                          shift and go to state 4
    Const_block                    shift and go to state 5
    Package_decl                   shift and go to state 6
    User_op_decl                   shift and go to state 7
    Package                        shift and go to state 9
    Op_kind                        shift and go to state 10

state 4

    (3) Decls_zero_or_mode -> empty .
    (45) Const_block -> empty .

  ! reduce/reduce conflict for $end resolved using rule 3 (Decls_zero_or_mode -> empty .)
  ! reduce/reduce conflict for END resolved using rule 3 (Decls_zero_or_mode -> empty .)
    $end            reduce using rule 3 (Decls_zero_or_mode -> empty .)
    END             reduce using rule 3 (Decls_zero_or_mode -> empty .)
    CONST           reduce using rule 45 (Const_block -> empty .)
    PACKAGE         reduce using rule 45 (Const_block -> empty .)
    FUNCTION        reduce using rule 45 (Const_block -> empty .)
    NODE            reduce using rule 45 (Const_block -> empty .)

  ! $end            [ reduce using rule 45 (Const_block -> empty .) ]
  ! END             [ reduce using rule 45 (Const_block -> empty .) ]


state 5

    (4) Decls -> Const_block .

    CONST           reduce using rule 4 (Decls -> Const_block .)
    PACKAGE         reduce using rule 4 (Decls -> Const_block .)
    FUNCTION        reduce using rule 4 (Decls -> Const_block .)
    NODE            reduce using rule 4 (Decls -> Const_block .)
    $end            reduce using rule 4 (Decls -> Const_block .)
    END             reduce using rule 4 (Decls -> Const_block .)


state 6

    (5) Decls -> Package_decl .

    CONST           reduce using rule 5 (Decls -> Package_decl .)
    PACKAGE         reduce using rule 5 (Decls -> Package_decl .)
    FUNCTION        reduce using rule 5 (Decls -> Package_decl .)
    NODE            reduce using rule 5 (Decls -> Package_decl .)
    $end            reduce using rule 5 (Decls -> Package_decl .)
    END             reduce using rule 5 (Decls -> Package_decl .)


state 7

    (6) Decls -> User_op_decl .

    CONST           reduce using rule 6 (Decls -> User_op_decl .)
    PACKAGE         reduce using rule 6 (Decls -> User_op_decl .)
    FUNCTION        reduce using rule 6 (Decls -> User_op_decl .)
    NODE            reduce using rule 6 (Decls -> User_op_decl .)
    $end            reduce using rule 6 (Decls -> User_op_decl .)
    END             reduce using rule 6 (Decls -> User_op_decl .)


state 8

    (44) Const_block -> CONST . Const_decl SEMICOLON Const_block
    (46) Const_decl -> . Interface_status LV6ID COLON Type_expr EQU Expr
    (47) Const_decl -> . Interface_status LV6ID COLON Type_expr
    (48) Interface_status -> . Visibility_zero_or_one External
    (49) Interface_status -> . Visibility_zero_or_one
    (50) Visibility_zero_or_one -> . Visibility
    (51) Visibility_zero_or_one -> . empty
    (53) Visibility -> . PRIVATE
    (54) Visibility -> . PUBLIC
    (80) empty -> .

    PRIVATE         shift and go to state 20
    PUBLIC          shift and go to state 21
    IMPORTED        reduce using rule 80 (empty -> .)
    LV6ID           reduce using rule 80 (empty -> .)

    Const_decl                     shift and go to state 15
    Interface_status               shift and go to state 16
    Visibility_zero_or_one         shift and go to state 17
    Visibility                     shift and go to state 18
    empty                          shift and go to state 19

state 9

    (7) Package_decl -> Package . Visibility_zero_or_one Pack_Lv6id Decls_zero_or_mode END SEMICOLON
    (50) Visibility_zero_or_one -> . Visibility
    (51) Visibility_zero_or_one -> . empty
    (53) Visibility -> . PRIVATE
    (54) Visibility -> . PUBLIC
    (80) empty -> .

    PRIVATE         shift and go to state 20
    PUBLIC          shift and go to state 21
    LV6ID           reduce using rule 80 (empty -> .)

    Visibility_zero_or_one         shift and go to state 22
    Visibility                     shift and go to state 18
    empty                          shift and go to state 19

state 10

    (8) User_op_decl -> Op_kind . Interface_status User_op_decl_Lv6id User_op_decl_1 In_Params RETURNS Out_Params User_op_decl_2 User_op_decl_3 Opt_body
    (48) Interface_status -> . Visibility_zero_or_one External
    (49) Interface_status -> . Visibility_zero_or_one
    (50) Visibility_zero_or_one -> . Visibility
    (51) Visibility_zero_or_one -> . empty
    (53) Visibility -> . PRIVATE
    (54) Visibility -> . PUBLIC
    (80) empty -> .

    PRIVATE         shift and go to state 20
    PUBLIC          shift and go to state 21
    IMPORTED        reduce using rule 80 (empty -> .)
    LV6ID           reduce using rule 80 (empty -> .)

    Interface_status               shift and go to state 23
    Visibility_zero_or_one         shift and go to state 17
    Visibility                     shift and go to state 18
    empty                          shift and go to state 19

state 11

    (43) Package -> PACKAGE .

    PRIVATE         reduce using rule 43 (Package -> PACKAGE .)
    PUBLIC          reduce using rule 43 (Package -> PACKAGE .)
    LV6ID           reduce using rule 43 (Package -> PACKAGE .)


state 12

    (11) Op_kind -> FUNCTION .

    PRIVATE         reduce using rule 11 (Op_kind -> FUNCTION .)
    PUBLIC          reduce using rule 11 (Op_kind -> FUNCTION .)
    LV6ID           reduce using rule 11 (Op_kind -> FUNCTION .)
    IMPORTED        reduce using rule 11 (Op_kind -> FUNCTION .)


state 13

    (12) Op_kind -> NODE .

    PRIVATE         reduce using rule 12 (Op_kind -> NODE .)
    PUBLIC          reduce using rule 12 (Op_kind -> NODE .)
    LV6ID           reduce using rule 12 (Op_kind -> NODE .)
    IMPORTED        reduce using rule 12 (Op_kind -> NODE .)


state 14

    (2) Decls_zero_or_mode -> Decls Decls_zero_or_mode .

    $end            reduce using rule 2 (Decls_zero_or_mode -> Decls Decls_zero_or_mode .)
    END             reduce using rule 2 (Decls_zero_or_mode -> Decls Decls_zero_or_mode .)


state 15

    (44) Const_block -> CONST Const_decl . SEMICOLON Const_block

    SEMICOLON       shift and go to state 24


state 16

    (46) Const_decl -> Interface_status . LV6ID COLON Type_expr EQU Expr
    (47) Const_decl -> Interface_status . LV6ID COLON Type_expr

    LV6ID           shift and go to state 25


state 17

    (48) Interface_status -> Visibility_zero_or_one . External
    (49) Interface_status -> Visibility_zero_or_one .
    (52) External -> . IMPORTED

    LV6ID           reduce using rule 49 (Interface_status -> Visibility_zero_or_one .)
    IMPORTED        shift and go to state 27

    External                       shift and go to state 26

state 18

    (50) Visibility_zero_or_one -> Visibility .
